change container to fluid container and limit image div width to 80%

--- a/index.css
+++ b/index.css
@@ -3,6 +3,7 @@ h1 {
 }
 
 #images {
+    max-width: 80%;
     margin: 0 auto;
     display: flex;
     flex-direction: row;
@@ -11,7 +12,7 @@ h1 {
 }
 
 img {
-    height: 30vh;
+    height: 200px;
     max-width: 30%;
 }
 
